# argiv

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
argiv/: __init__.py  __init__.pyi  _core.pyi  helpers.py
benchmarks/: bench_greeks.py  bench_surface.py  memcheck.py
src/argiv/: arrow_helpers.hpp  arrow_interop.cpp  arrow_interop.hpp  compute.cpp  compute.hpp  core.cpp  core.hpp  greeks_from_iv.cpp  greeks_from_iv.hpp  surface.cpp  surface.hpp
src/bindings/: python_module.cpp
tests/: test_argiv.py  test_constant_maturity.py  test_decompose_variance.py  test_greeks_from_iv.py  test_schadner_iv.py  test_surface.py  test_type_safety.py  test_validation.py
